Add texts classifier in homework 6

--- a/Tarea 6/Preparacion_de_datos_OrtizBarajas.ipynb
+++ b/Tarea 6/Preparacion_de_datos_OrtizBarajas.ipynb
@@ -248,11 +248,7 @@
     "def count_char(text_list):\n",
     "    char_counter = []\n",
     "    for text in text_list:\n",
-    "        tokens = text.split(' ')\n",
-    "        counter = 0\n",
-    "        for token in tokens:\n",
-    "            counter += len(token.strip())\n",
-    "        char_counter.append(counter)\n",
+    "        char_counter.append(len(text))\n",
     "    return char_counter            "
    ]
   },
@@ -264,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "(57.69968911917098, 115.97322623828649)"
+       "(71.02362694300518, 138.8661311914324)"
       ]
      },
      "execution_count": 6,
@@ -314,15 +310,12 @@
     "la lista que recibe como entrada\n",
     "\"\"\"\n",
     "def digit_counter(text_list):\n",
-    "    digit_tokenizer = RegexpTokenizer(r'[0-9]+')\n",
-    "    digit_counter = []\n",
+    "    digit_tokenizer = RegexpTokenizer(r'[0-9]')\n",
+    "    counter = []\n",
     "    for text in text_list:\n",
     "        tokens = digit_tokenizer.tokenize(text)\n",
-    "        counter = 0\n",
-    "        for token in tokens:\n",
-    "            counter += len(token.strip())\n",
-    "        digit_counter.append(counter)\n",
-    "    return digit_counter"
+    "        counter.append(len(tokens))\n",
+    "    return counter"
    ]
   },
   {
@@ -384,14 +377,11 @@
     "por cada texto de la lista que recibe como entrada\n",
     "\"\"\"\n",
     "def special_char_counter(text_list):\n",
-    "    special_tokenizer = RegexpTokenizer(r'\\W+')\n",
+    "    special_tokenizer = RegexpTokenizer(r'\\W')\n",
     "    special_counter = []\n",
     "    for text in text_list:\n",
     "        tokens = special_tokenizer.tokenize(text)\n",
-    "        counter = 0\n",
-    "        for token in tokens:\n",
-    "            counter += len(token.strip())\n",
-    "        special_counter.append(counter)\n",
+    "        special_counter.append(len(tokens))\n",
     "    return special_counter"
    ]
   },
@@ -403,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "(4.081450777202073, 6.165997322623829)"
+       "(17.29181347150259, 29.041499330655956)"
       ]
      },
      "execution_count": 10,
@@ -517,7 +507,7 @@
     "de stopwords\n",
     "\"\"\"\n",
     "def clean_texts(text_list, stopwords, stopwords_option=False):\n",
-    "    tokenizer = RegexpTokenizer(r'[a-z]+')\n",
+    "    tokenizer = RegexpTokenizer(r'(?u)\\b\\w\\w+\\b')\n",
     "    tokens = []\n",
     "    for text in text_list:\n",
     "        text = text.lower()\n",
@@ -556,8 +546,17 @@
     {
      "data": {
       "text/plain": [
-       "(['u', 'gt', 'lt', 'get', 'ok', 'go', 'ur', 'know', 'call', 'got'],\n",
-       " ['call', 'free', 'u', 'p', 'txt', 'ur', 'mobile', 'text', 'stop', 'claim'])"
+       "(['gt', 'lt', 'get', 'ok', 'go', 'ur', 'know', 'call', 'good', 'got'],\n",
+       " ['call',\n",
+       "  'free',\n",
+       "  'txt',\n",
+       "  'ur',\n",
+       "  'mobile',\n",
+       "  'text',\n",
+       "  'stop',\n",
+       "  'claim',\n",
+       "  'reply',\n",
+       "  'www'])"
       ]
      },
      "execution_count": 15,
@@ -603,8 +602,8 @@
     {
      "data": {
       "text/plain": [
-       "(['i', 'you', 'to', 'the', 'a', 'and', 'in', 'me', 'my', 'is'],\n",
-       " ['to', 'a', 'you', 'your', 'the', 'for', 'now', 'or', 'is', 'on'])"
+       "(['you', 'to', 'the', 'and', 'in', 'me', 'my', 'is', 'it', 'that'],\n",
+       " ['to', 'you', 'your', 'the', 'for', 'now', 'or', 'is', 'on', 'have'])"
       ]
      },
      "execution_count": 16,
